Effort of 7/10